add click label

--- a/apps/android/vanilla/features/history/impl/src/main/res/values/strings.xml
+++ b/apps/android/vanilla/features/history/impl/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
         <item quantity="other">%d teams</item>
     </plurals>
     <string name="no_matches">There are no matches so far.</string>
+    <string name="match_tile_click_label">Play</string>
 </resources>
