--- a/apps/android/vanilla/features/history/impl/src/main/res/values/strings.xml
+++ b/apps/android/vanilla/features/history/impl/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="match_tile_click_label">Play</string>
     <string name="create_match_fab_content_description">Create match</string>
     <string name="edit_match_button_content_description">Edit match</string>
+    <string name="delete_match_button_content_description">Delete match</string>
 </resources>
